test/test-app.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-migration

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: test-migration
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami
        image: traefik/whoami:v1.8.0
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: test-migration
spec:
  selector:
    app: whoami
  ports:
  - port: 80
    targetPort: 80
